Fix word wrap in detail table
+ remove unrequired css styles

--- a/src/assets/scss/_plan-node.scss
+++ b/src/assets/scss/_plan-node.scss
@@ -52,13 +52,6 @@ $bg-color: #fff;
   }
 
   .prop-list {
-    float: left;
-    text-align: left;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    word-break: break-all;
-    margin-top: $padding-lg;
-    margin-bottom: $padding-base;
     color: inherit;
   }
 
